no access to node connectors when a node is inside a layout frame #64660

Closed
opened 2019-05-15 16:14:58 +02:00 by Norbert Krieg · 15 comments

System Information
Operating system: Linux-4.9.0-9-amd64-x86_64-with-debian-9.9 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 64), branch: blender2.7, commit date: 2019-05-14 22:59, hash: 4e46ed37fc
Worked:

Short description of error
can't access node connectors when a node is inside a layout frame.

Exact steps for others to reproduce the error

  1. just use the standard file and put the principled shader inside a layout frame.
  2. try to access the node connectors of the shader node - it's not possible, only frame or node selection possible
**System Information** Operating system: Linux-4.9.0-9-amd64-x86_64-with-debian-9.9 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 64), branch: blender2.7, commit date: 2019-05-14 22:59, hash: `4e46ed37fc` Worked: **Short description of error** can't access node connectors when a node is inside a layout frame. **Exact steps for others to reproduce the error** 1. just use the standard file and put the principled shader inside a layout frame. 2. try to access the node connectors of the shader node - it's not possible, only frame or node selection possible
Author

Added subscriber: @nobi08

Added subscriber: @nobi08

Added subscribers: @mont29, @brecht, @WilliamReynish

Added subscribers: @mont29, @brecht, @WilliamReynish

@mont29 @brecht I guess this is related to the recent changes in selecting and moving nodes?

@mont29 @brecht I guess this is related to the recent changes in selecting and moving nodes?

No idea what the issue is exactly here? I certainly can 'access' (as in, drag links to/from) sockets of nodes inside a frame… Also, reporter says it also affects 2.7 branch, which did not have that change at all afaik, so really doubt recent node selection changes are at stake here?

No idea what the issue is exactly here? I certainly can 'access' (as in, drag links to/from) sockets of nodes inside a frame… Also, reporter says it also affects 2.7 branch, which did not have that change at all afaik, so really doubt recent node selection changes are at stake here?

The blender2.7 branch thing is a buildbot issue, it's actually 2.8.

The `blender2.7` branch thing is a buildbot issue, it's actually 2.8.
Author

I didn't say that 2.7 is affected. It's just the usual report line which was generated automatically by Blender when clicking the report bug menu... as bracht said.
I would raise the status to high, because all framed nodes are not accessible for people having the same issue since this version.

I didn't say that 2.7 is affected. It's just the usual report line which was generated automatically by Blender when clicking the report bug menu... as bracht said. I would raise the status to high, because all framed nodes are not accessible for people having the same issue since this version.

OK, did not knew about that buildbot glitch… :/

And again, I cannot reproduce here. Please define 'not accessible'. We need precise description of the issue to investigate it…

OK, did not knew about that buildbot glitch… :/ And again, I cannot reproduce here. Please define 'not accessible'. We need precise description of the issue to investigate it…

Added subscriber: @StephenSwaney

Added subscriber: @StephenSwaney

I can't reproduce this with today's (14-May) Linux build.

Got a .blend for us showing the problem?

I can't reproduce this with today's (14-May) Linux build. Got a .blend for us showing the problem?
Author

well, if I try to click on the socket circle to pull out a connection/noodle to another node, it is not possible, because I cannot access the socket by clicking. Instead the whole node or the whole frame will be grabbed and moved.
If I delete the layout frame behind that node, everything works well.
untitled.blend

Also, if I try to draw a noodle from the material output to anywhere in the middle of the material output node socket called "surface", the whole node will be dragged instead of just a noodle coming out.

If I delete the layout frame, everything works fine.

well, if I try to click on the socket circle to pull out a connection/noodle to another node, it is not possible, because I cannot access the socket by clicking. Instead the whole node or the whole frame will be grabbed and moved. If I delete the layout frame behind that node, everything works well. [untitled.blend](https://archive.blender.org/developer/F7039154/untitled.blend) Also, if I try to draw a noodle from the material output to anywhere in the middle of the material output node socket called "surface", the whole node will be dragged instead of just a noodle coming out. If I delete the layout frame, everything works fine.
Bastien Montagne self-assigned this 2019-05-15 17:55:53 +02:00

Ah, can reproduce with factory startup actually, guess that only affects leftclick select…

Ah, can reproduce with factory startup actually, guess that only affects leftclick select…

This issue was referenced by 59b7f3a164

This issue was referenced by 59b7f3a16463f2286a8349028f15e7e7a3be06dc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 5c0e282a73

This issue was referenced by 5c0e282a73935051efaab9d089590e6d4f627b97

This issue was referenced by fd3f75a02c

This issue was referenced by fd3f75a02cf9c40c7ba0d15f2c55188b18662a93
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64660
No description provided.